Invoice project 1st version

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <button type="button" id="printMemoButton">Print Memo</button>
     </div>
   </form>
-  <div class="memoSec mt-3">
+  <div class="memoSec mt-3" id="invoice">
     <h1 class="text-center">Cash Memo</h1>
     <h1 style="overflow: hidden;">================================================</h1>
     <div class="memoBody">
